--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -64,7 +64,16 @@ h1{
   and (max-device-width: 900px) 
   and (-webkit-min-device-pixel-ratio: 2) { 
 
+body {
 
+ 
+  background: url('images/background2.png') repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+}
 	.container  {
   
  height: 100%;
