--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -60,14 +60,15 @@ h1{
     display: none
 }
 @media only screen 
-  and (min-device-width: 700px) 
-  and (max-device-width: 1080px) 
+  and (min-device-width: 350px) 
+  and (max-device-width: 900px) 
   and (-webkit-min-device-pixel-ratio: 2) { 
 
 body {
-background-image: none;
+
  
  background-color: black;
+	height:100vh;
 
 }
 	.container  {
