--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -67,7 +67,7 @@ h1{
 body {
 
  
-  background: url('images/background2.png') no-repeat center center fixed; 
+  background: url('images/background2.png') repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
