--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -29,12 +29,15 @@ h1{
 .video {
     margin-top: 5%;
 }
-.steam {
+.steam li{
     margin-top: 3%;
+	margin: 100px;
     height: 43px;
     width: 365px;
     font-family:Computerfont;
     color:lawngreen;
+	list-style: none;
+	display:inline;
    
 }
 .jyst {
@@ -67,7 +70,7 @@ h1{
 body {
 
  
-  background: url('images/background2.png') no-repeat center center fixed; 
+  background: url('images/background2.png') repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
